# trace-compiler

./: README.md  pyproject.toml
.github/workflows/: release.yml
configs/: debug.yaml  edit.yaml  verify.yaml
src/trace_compiler/: __init__.py  cli.py  distiller.py  evaluator.py  parser.py  skill_extractor.py
tests/: test_parser.py
