[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fableforge-trace-compiler"
version = "0.1.0"
description = "Compile agent traces into distilled LoRA weights for specific coding behaviors"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "FableForge", email = "team@fableforge.ai"}]
keywords = ["agent", "traces", "compilation", "lora", "fine-tuning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.2.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "unsloth>=2024.1",
    "datasets>=2.20.0",
]
gpu = [
    "torch>=2.2.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "unsloth>=2024.1",
]
all = [
    "trace-compiler[train,gpu]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
trace-compiler = "trace_compiler.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true